--- a/LMS/pom.xml
+++ b/LMS/pom.xml
@@ -3,7 +3,7 @@
     <groupId>com.example.lms</groupId>
     <artifactId>LMS</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>jar</packaging>
+    <packaging>pom</packaging>
 
     <name>Library Management System</name>
     <description>Library Management System using Spring Boot</description>
@@ -12,6 +12,28 @@
         <java.version>21</java.version>
         <spring.boot.version>3.2.0</spring.boot.version>
     </properties>
+
+    <dependencyManagement>
+        <dependencies>
+            <!-- Spring Cloud Dependencies -->
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>2022.0.3</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+
+            <!-- Spring Boot Dependencies -->
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-dependencies</artifactId>
+                <version>3.1.0</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
     <dependencies>
         <!-- Spring Boot Starter Web -->
@@ -99,4 +121,8 @@
             </plugin>
         </plugins>
     </build>
+
+    <modules>
+        <module>eureka-server</module>
+    </modules>
 </project>
